[gd_scene load_steps=12 format=3 uid="uid://bkphd68lwwlgu"]

[ext_resource type="Script" path="res://Scripts/trash_can.gd" id="1_wm1ja"]
[ext_resource type="Texture2D" uid="uid://olsgwlqtqo0o" path="res://Sprites/trash_can.png" id="2_xpcgh"]
[ext_resource type="Texture2D" uid="uid://by5bqb45hxuq8" path="res://Sprites/Chicken.png" id="3_7e0bl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vdn12"]
atlas = ExtResource("3_7e0bl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqr18"]
atlas = ExtResource("3_7e0bl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s26cs"]
atlas = ExtResource("3_7e0bl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uep8l"]
atlas = ExtResource("3_7e0bl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwi1f"]
atlas = ExtResource("3_7e0bl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8krk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdn12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqr18")
}],
"loop": true,
"name": &"angry",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s26cs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uep8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwi1f")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_77bnc"]
radius = 14.5781
height = 29.1562

[sub_resource type="CircleShape2D" id="CircleShape2D_0os6e"]
radius = 8.0

[node name="Napkin Box" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(2.90597, 2.90597)
collision_mask = 2
script = ExtResource("1_wm1ja")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xpcgh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(3, -8)
sprite_frames = SubResource("SpriteFrames_f8krk")
animation = &"walk"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.365
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_77bnc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
scale = Vector2(1.08, 1.08)
shape = SubResource("CircleShape2D_0os6e")

[node name="trash_bag_Spawner" type="Node2D" parent="."]
position = Vector2(0, -3)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
